<resources>
    <string name="app_name">Passkeeper</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="password">Password</string>
    <string name="all">All</string>
    <string name="card">Card</string>
    <string name="note">Note</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="enter_code">Enter code</string>
    <string name="code">Code</string>
    <string name="verify">Verify</string>
    <string name="new_password">New password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="save_password">Save password</string>
    <string name="icon">icon</string>
    <string name="favorite">Favorite</string>
    <string name="delete_record">Delete record</string>
    <string name="share_to_group">Share to group</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="urls">URLs</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_day">Expiration Day</string>
    <string name="edit">Edit</string>
    <string name="tags">Tags</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="member_email">Member Email</string>
    <string name="group_name">Group Name</string>
    <string name="generate_password">Generate Password</string>
    <string name="copy">Copy</string>
    <string name="options">OPTIONS</string>
    <string name="length">Length</string>
    <string name="value">value</string>
    <string name="A_Z">A-Z</string>
    <string name="_0_9">0-9</string>
    <string name="a_z">a-z</string>
    <string name="specialChar">!@#</string>
    <string name="minimum_number">Minimum Number</string>
    <string name="minimum_special">Minimum Special</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_url">New URL</string>
</resources>