<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:title="@string/all" />

        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/ic_password"
            android:title="@string/password" />

        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/ic_card"
            android:title="@string/card" />

        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_note"
            android:title="@string/note" />
    </group>

    <group>
        <item
            android:id="@+id/manage_group"
            android:title="Manage Group" />
    </group>

    <group>
        <item
            android:id="@+id/log_out"
            android:title="Log out" />
    </group>
</menu>