<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="48sp"
        android:textColor="#0077B6"
        android:layout_marginTop="120dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#9A9A9A"
        android:layout_marginTop="77dp"/>
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/email"
        android:textColorHint="#D38F8E8E"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#9A9A9A"
        android:layout_marginTop="24dp"/>
    <com.example.passkeeper.ui.utils.PasswordEditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="18sp"
        android:textColorHint="#D38F8E8E"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
        <TextView
            android:id="@+id/forgot_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:textColor="#9A9A9A"
            android:layout_marginStart="40dp"/>
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textColor="#0077B6"
            android:layout_marginStart="84dp"/>
    </LinearLayout>


</LinearLayout>