<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/check_eye_arrows_list"
        android:inputType="textVisiblePassword"
        android:singleLine="true">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/urls"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <EditText
        android:id="@+id/urls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_delete"
        android:inputType="textUri"
        android:singleLine="true">
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button"
        android:text="@string/new_url"
        android:textColor="@color/white">
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tags"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tagsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </com.google.android.material.chip.ChipGroup>
    <EditText
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true">
    </EditText>
</LinearLayout>