<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.login.fragment.SetPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#9A9A9A"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/new_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#D38F8E8E"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_enter_password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#9A9A9A"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/re_enter_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#D38F8E8E"
        android:textSize="18sp" />

    <Button
        android:id="@+id/save_pass_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:background="@drawable/bg_button"
        android:text="@string/save_password"
        android:textColor="@color/white" />

</LinearLayout>