<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cardholder_name"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/cardholderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableEndCompat="@drawable/ic_copy_blue">
    </TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/card_number"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/cardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableEndCompat="@drawable/ic_copy_blue">
    </TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/expiration_day"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/expirationDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableEndCompat="@drawable/ic_copy_blue">
    </TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/note"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableEndCompat="@drawable/ic_copy_blue">
    </TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="5dp"/>
</LinearLayout>