<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#9A9A9A"
        android:textStyle="bold" >
    </TextView>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:background="@android:color/transparent">
    </EditText>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardholder_name"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <EditText
        android:id="@+id/cardholderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:background="@android:color/transparent">
    </EditText>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true"
        android:background="@android:color/transparent">
    </EditText>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiration_day"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <EditText
        android:id="@+id/expirationDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:singleLine="true"
        android:background="@android:color/transparent">
    </EditText>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/note"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
    </EditText>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tags"
        android:textColor="#9A9A9A"
        android:textStyle="bold">
    </TextView>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tagsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </com.google.android.material.chip.ChipGroup>
    <EditText
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:background="@android:color/transparent">
    </EditText>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black" />
</LinearLayout>