<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    tools:context=".ui.generatePass.GeneratePasswordActivity">

    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollHorizontally="true">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <Button
        android:id="@+id/btnGenPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button"
        android:text="@string/generate_password"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_gray_button"
        android:text="@string/copy"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/options"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/black">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/length"
        android:textSize="16sp"
        android:textColor="@color/black">
    </TextView>

    <TextView
        android:id="@+id/txvLengthValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textAlignment="center"
        android:textColor="#0077B6">
    </TextView>

    <SeekBar
        android:id="@+id/sbrLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:max="50"
        android:progress="25">
    </SeekBar>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/A_Z"
                android:textSize="16sp"
                android:textColor="@color/black">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <Switch
                    android:id="@+id/swtUppercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true">
                </Switch>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/_0_9"
                android:textSize="16sp"
                android:textColor="@color/black">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <Switch
                    android:id="@+id/swtNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true">
                </Switch>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/a_z"
                android:textSize="16sp"
                android:textColor="@color/black">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <Switch
                    android:id="@+id/swtLowercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true">
                </Switch>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/specialChar"
                android:textSize="16sp"
                android:textColor="@color/black">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <Switch
                    android:id="@+id/swtSpecial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true">
                </Switch>
            </LinearLayout>
        </LinearLayout>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/minimum_number"
            android:textSize="16sp"
            android:textColor="@color/black">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <com.travijuu.numberpicker.library.NumberPicker
                android:id="@+id/npkMinNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:min="1"
                app:value="5">
<!--                app:custom_layout="@layout/number_picker_custom_layout">-->
            </com.travijuu.numberpicker.library.NumberPicker>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/minimum_special"
            android:textSize="16sp"
            android:textColor="@color/black">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <com.travijuu.numberpicker.library.NumberPicker
                android:id="@+id/npkMinSpecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:min="1"
                app:value="5">
<!--                app:custom_layout="@layout/number_picker_custom_layout">-->
            </com.travijuu.numberpicker.library.NumberPicker>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>